--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
-{
-  "version": 2,
+{  "version": 2,
   "framework": "nextjs",
-  "buildCommand": "next build",
+  "buildCommand": "npm run build",
   "installCommand": "npm install",
   "env": {
     "MONGODB_URI": "${MONGODB_URI}",
