--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
-{
-  "version": 2,
+{  "version": 2,
   "framework": "nextjs",
   "buildCommand": "npm run build",
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm install",
   "env": {
     "MONGODB_URI": "${MONGODB_URI}",
     "MONGODB_DB_NAME": "${MONGODB_DB_NAME}",
